[metadata]
name = django-toman-time-utils
version = 1.0.0
description = a Django app to provide time utils for Toman company's Django projects.
long_description = file: README.rst
url = https://tomanpay.net/
author = Mohammad Javad Nikbakht
author_email = javad@tomanpay.net
license = GNU General Public License v3 (GPLv3)
license_files = file: LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: X.Y  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    django >= 3.0
    djangorestframework >= 3.11.0
    django-filter >= 2.3.0
    khayyam >= 3.0.17
    pytz >= 2023.3
